Fix comments backend mobile styling horizontal scroll

--- a/src/pages/comments-backend.module.scss
+++ b/src/pages/comments-backend.module.scss
@@ -1,14 +1,17 @@
 .confirmation-modal {
-  & > div > div {
+  &>div>div {
     width: 500px;
   }
+
   h1 {
     font-size: 2.4rem;
   }
+
   p {
     font-size: 1.6rem;
     margin: 1rem 0;
   }
+
   button {
     font-size: 1.6rem;
     width: 50%;
@@ -21,6 +24,7 @@
     max-width: 900px;
   }
 }
+
 .instructions {
   max-width: 900px;
   margin: 0 0 2rem;
@@ -32,11 +36,16 @@
   grid-gap: 4rem;
   justify-content: center;
   align-items: start;
+
+  @include break('mobile') {
+    grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
+  }
 }
 
 .comment-box {
   padding: 2rem;
   background-color: tint($river-blue, 60%);
+
   &.algae {
     background-color: tint($algae, 50%);
   }
@@ -48,6 +57,7 @@
 
 .comment-wrapper {
   margin-bottom: 3rem;
+
   h2 {
     font-size: 3rem;
     margin-bottom: 1.5rem;
